Fix spacing of menu and pre-nav bar

--- a/assets/sass/organisms/_header.scss
+++ b/assets/sass/organisms/_header.scss
@@ -77,6 +77,7 @@ div[id$="-layoutheaderblock"] {
   display: -webkit-box;
   list-style: none;
   padding-left: 0;
+  margin-bottom: 0;
 
   @media screen and (max-width: $screen-md-min) {
     &:not(.mobile) {
